fixed avatar spacing

--- a/src/components/AppNavbar/AppNavbar.css
+++ b/src/components/AppNavbar/AppNavbar.css
@@ -26,7 +26,6 @@ nav ul {
     height: 100%;
     width: 40%;
     padding-right: 0;
-    background-color: aqua;
 }
 
 nav ul li {
